import {getTester} from './utils/test.js';

const {test} = getTester(import.meta);

test.snapshot({
	valid: [
		'{}',
		'"not an object"',
		'{"dependencies": {"foo": "^1.0.0"}}',
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"bar": "^2.0.0"}}',
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "^1.0.0"}}',
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": {".": "^1.0.0", "bar": "^2.0.0"}}}',
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "$foo"}}',
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": {".": "$foo"}}}',
		'{"dependencies": {"foo": "^1.0.0", "bar": "^1.0.0"}, "overrides": {"foo": "$bar"}}',
		'{"peerDependencies": {"foo": "^1"}, "dependencies": {"foo": "^2", "bar": "^4"}, "optionalDependencies": {"foo": "^3"}, "devDependencies": {"foo": "^4"}, "overrides": {"bar": "$foo"}}',
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": ""}}',
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "*"}}',
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": {"bar": "^2.0.0"}}}',
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo@^2.0.0": "^2.0.0"}}',
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo@^1.0.0": "^1.0.0"}}',
		'{"dependencies": {"foo": "^1.2.3"}, "overrides": {"foo@^1.0.0": "^1.2.3", "foo@~1.2.0": "^2.0.0"}}',
		'{"dependencies":{"foo":"^1"},"overrides":{"foo":"*","foo@^1":"^2"}}',
		'{"dependencies":{"1":"^1"},"overrides":{"1@^1":"^2","1":"*"}}',
		'{"dependencies":{"foo":"^1"},"overrides":{"foo":"^2","foo":"^1"}}',
		'{"dependencies":{"foo":"^1"},"overrides":{"foo":{".":"^2",".":"^1"}}}',
		'{"dependencies":{"foo":"^1"},"overrides":{"foo":"^2"},"overrides":{"foo":"^1"}}',
		'{"dependencies":{"foo":"^2"},"dependencies":{"foo":"^1"},"overrides":{"foo":"^1"}}',
		'{"dependencies":{"foo":"^1","foo":1},"overrides":{"foo":"^2"}}',
		'{"dependencies":{"Foo":"^1"},"devDependencies":{"foo":"^2"},"overrides":{"Foo":"^2"}}',
		'{"peerDependencies": {"foo": "^1.0.0"}, "dependencies": {"foo": "^2.0.0"}, "optionalDependencies": {"foo": "^3.0.0"}, "devDependencies": {"foo": "^4.0.0"}, "overrides": {"foo": "^4.0.0"}}',
		'{"dependencies":{"foo":"^1","bar":""},"overrides":{"foo":"$bar"}}',
		'{"dependencies":{"foo":"^1","bar":"$baz"},"overrides":{"foo":"$bar"}}',
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "$bar"}}',
		'{"devDependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "^1.0.0"}}',
		'{"optionalDependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "^1.0.0"}}',
		'{"peerDependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "^1.0.0"}}',
		// Invalid fields are left to `valid-fields`.
		'{"dependencies": {"foo": 1}, "overrides": {"foo": "^2.0.0"}}',
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": []}',
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": {".": 1}}}',
	],
	invalid: [
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "^2.0.0"}}',
		'{"devDependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "^2.0.0"}}',
		'{"optionalDependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "^2.0.0"}}',
		'{"peerDependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "^2.0.0"}}',
		'{"dependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}, "overrides": {"foo": "$bar"}}',
		'{"dependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}, "overrides": {"foo": {".": "$bar"}}}',
		'{"dependencies": {"@scope/foo": "^1.0.0"}, "overrides": {"@scope/foo": "^2.0.0"}}',
		'{"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": {".": "^2.0.0"}}}',
		'{"dependencies": {"foo": "^1.2.3"}, "overrides": {"foo@^1.0.0": {"bar": "^2.0.0"}}}',
		'{"dependencies": {"foo": "npm:bar@^1.0.0"}, "overrides": {"foo@^1.0.0": {"bar": "^2.0.0"}}}',
		'{"dependencies": {"@scope/foo": "^1.2.3"}, "overrides": {"@scope/foo@^1.0.0": {"bar": "^2.0.0"}}}',
		'{"dependencies": {"foo": "^1.0.0"}, "devDependencies": {"foo": "^2.0.0"}, "overrides": {"foo": "^1.0.0"}}',
		'{"dependencies": {"foo": "latest"}, "overrides": {"foo": "next"}}',
		'{"dependencies": {"foo": "latest"}, "overrides": {"foo@next": "beta"}}',
		'{"dependencies": {"foo": "git+https://github.com/user/repo.git#semver:^1.0.0"}, "overrides": {"foo@^1.0.0": "^2.0.0"}}',
		'{"dependencies": {"foo": "file:../foo"}, "overrides": {"foo@file:../bar": "file:../baz"}}',
		'{"dependencies": {"foo": "../foo"}, "overrides": {"foo@../bar": "../baz"}}',
		'{"dependencies": {"foo": "https://example.com/foo.tgz"}, "overrides": {"foo@https://example.com/bar.tgz": "https://example.com/baz.tgz"}}',
		'{"dependencies": {"foo": "^1.2.3"}, "overrides": {"foo@^1.0.0": "^2.0.0", "foo@~1.2.0": "^1.2.3"}}',
		'{"dependencies": {"foo": "^1.2.3"}, "overrides": {"foo@^1.0.0": {}}}',
		'{"dependencies":{"4294967295":"^1"},"overrides":{"4294967295@^1":"^2","4294967295":"*"}}',
		'{"dependencies":{"foo":"^1.2.3"},"overrides":{"foo@^1.0.0":{"bar":"^2.0.0"}}}',
		'{\n\t"dependencies": {\n\t\t"foo": "^1.2.3"\n\t},\n\t"overrides": {\n\t\t"foo@^1.0.0": {\n\t\t\t"bar": "^2.0.0"\n\t\t}\n\t}\n}',
		'{\n\t"dependencies": {\n\t\t"foo": "^1.2.3"\n\t},\n\t"overrides": {\n\t\t"foo@^1.0.0": {\n\t\t}\n\t}\n}',
		'{"dependencies":{"foo":"^1","bar":"^2"},"devDependencies":{"bar":""},"overrides":{"foo":"$bar"}}',
		'{"dependencies":{"Foo":"^1"},"devDependencies":{"foo":"^2"},"overrides":{"foo":"^1"}}',
	],
});
