exports[`invalid(1): {\"dependencies\": {\"foo\": \"^1.0.0\"}, \"overrides\": {\"foo\": \"^2.0.0\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "^2.0.0"}}

`;

exports[`invalid(1): {\"dependencies\": {\"foo\": \"^1.0.0\"}, \"overrides\": {\"foo\": \"^2.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "^2.0.0"}}
    |                                                          ^^^^^^^^ Override for direct dependency \`foo\` conflicts with its \`^1.0.0\` specifier.

Output:
  1 | {"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "$foo"}}

`;

exports[`invalid(10): {\"dependencies\": {\"foo\": \"npm:bar@^1.0.0\"}, \"overrides\": {\"foo@^1.0.0\": {\"bar\": \"^2.0.0\"}}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "npm:bar@^1.0.0"}, "overrides": {"foo@^1.0.0": {"bar": "^2.0.0"}}}

`;

exports[`invalid(10): {\"dependencies\": {\"foo\": \"npm:bar@^1.0.0\"}, \"overrides\": {\"foo@^1.0.0\": {\"bar\": \"^2.0.0\"}}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "npm:bar@^1.0.0"}, "overrides": {"foo@^1.0.0": {"bar": "^2.0.0"}}}
    |                                                                         ^^^^^^^^^^^^^^^^^ Override for direct dependency \`foo\` conflicts with its \`npm:bar@^1.0.0\` specifier.

Output:
  1 | {"dependencies": {"foo": "npm:bar@^1.0.0"}, "overrides": {"foo@^1.0.0": {".": "$foo","bar": "^2.0.0"}}}

`;

exports[`invalid(11): {\"dependencies\": {\"@scope/foo\": \"^1.2.3\"}, \"overrides\": {\"@scope/foo@^1.0.0\": {\"bar\": \"^2.0.0\"}}} 1`] = `

[Input]
  1 | {"dependencies": {"@scope/foo": "^1.2.3"}, "overrides": {"@scope/foo@^1.0.0": {"bar": "^2.0.0"}}}

`;

exports[`invalid(11): {\"dependencies\": {\"@scope/foo\": \"^1.2.3\"}, \"overrides\": {\"@scope/foo@^1.0.0\": {\"bar\": \"^2.0.0\"}}} 2`] = `

Message:
> 1 | {"dependencies": {"@scope/foo": "^1.2.3"}, "overrides": {"@scope/foo@^1.0.0": {"bar": "^2.0.0"}}}
    |                                                                               ^^^^^^^^^^^^^^^^^ Override for direct dependency \`@scope/foo\` conflicts with its \`^1.2.3\` specifier.

Output:
  1 | {"dependencies": {"@scope/foo": "^1.2.3"}, "overrides": {"@scope/foo@^1.0.0": {".": "$@scope/foo","bar": "^2.0.0"}}}

`;

exports[`invalid(12): {\"dependencies\": {\"foo\": \"^1.0.0\"}, \"devDependencies\": {\"foo\": \"^2.0.0\"}, \"overrides\": {\"foo\": \"^1.0.0\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "^1.0.0"}, "devDependencies": {"foo": "^2.0.0"}, "overrides": {"foo": "^1.0.0"}}

`;

exports[`invalid(12): {\"dependencies\": {\"foo\": \"^1.0.0\"}, \"devDependencies\": {\"foo\": \"^2.0.0\"}, \"overrides\": {\"foo\": \"^1.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "^1.0.0"}, "devDependencies": {"foo": "^2.0.0"}, "overrides": {"foo": "^1.0.0"}}
    |                                                                                                ^^^^^^^^ Override for direct dependency \`foo\` conflicts with its \`^2.0.0\` specifier.

Output:
  1 | {"dependencies": {"foo": "^1.0.0"}, "devDependencies": {"foo": "^2.0.0"}, "overrides": {"foo": "$foo"}}

`;

exports[`invalid(13): {\"dependencies\": {\"foo\": \"latest\"}, \"overrides\": {\"foo\": \"next\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "latest"}, "overrides": {"foo": "next"}}

`;

exports[`invalid(13): {\"dependencies\": {\"foo\": \"latest\"}, \"overrides\": {\"foo\": \"next\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "latest"}, "overrides": {"foo": "next"}}
    |                                                          ^^^^^^ Override for direct dependency \`foo\` conflicts with its \`latest\` specifier.

Output:
  1 | {"dependencies": {"foo": "latest"}, "overrides": {"foo": "$foo"}}

`;

exports[`invalid(14): {\"dependencies\": {\"foo\": \"latest\"}, \"overrides\": {\"foo@next\": \"beta\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "latest"}, "overrides": {"foo@next": "beta"}}

`;

exports[`invalid(14): {\"dependencies\": {\"foo\": \"latest\"}, \"overrides\": {\"foo@next\": \"beta\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "latest"}, "overrides": {"foo@next": "beta"}}
    |                                                               ^^^^^^ Override for direct dependency \`foo\` conflicts with its \`latest\` specifier.

Output:
  1 | {"dependencies": {"foo": "latest"}, "overrides": {"foo@next": "$foo"}}

`;

exports[`invalid(15): {\"dependencies\": {\"foo\": \"git+https://github.com/user/repo.git#semver:^1.0.0\"}, \"overrides\": {\"foo@^1.0.0\": \"^2.0.0\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "git+https://github.com/user/repo.git#semver:^1.0.0"}, "overrides": {"foo@^1.0.0": "^2.0.0"}}

`;

exports[`invalid(15): {\"dependencies\": {\"foo\": \"git+https://github.com/user/repo.git#semver:^1.0.0\"}, \"overrides\": {\"foo@^1.0.0\": \"^2.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "git+https://github.com/user/repo.git#semver:^1.0.0"}, "overrides": {"foo@^1.0.0": "^2.0.0"}}
    |                                                                                                             ^^^^^^^^ Override for direct dependency \`foo\` conflicts with its \`git+https://github.com/user/repo.git#semver:^1.0.0\` specifier.

Output:
  1 | {"dependencies": {"foo": "git+https://github.com/user/repo.git#semver:^1.0.0"}, "overrides": {"foo@^1.0.0": "$foo"}}

`;

exports[`invalid(16): {\"dependencies\": {\"foo\": \"file:../foo\"}, \"overrides\": {\"foo@file:../bar\": \"file:../baz\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "file:../foo"}, "overrides": {"foo@file:../bar": "file:../baz"}}

`;

exports[`invalid(16): {\"dependencies\": {\"foo\": \"file:../foo\"}, \"overrides\": {\"foo@file:../bar\": \"file:../baz\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "file:../foo"}, "overrides": {"foo@file:../bar": "file:../baz"}}
    |                                                                           ^^^^^^^^^^^^^ Override for direct dependency \`foo\` conflicts with its \`file:../foo\` specifier.

Output:
  1 | {"dependencies": {"foo": "file:../foo"}, "overrides": {"foo@file:../bar": "$foo"}}

`;

exports[`invalid(17): {\"dependencies\": {\"foo\": \"../foo\"}, \"overrides\": {\"foo@../bar\": \"../baz\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "../foo"}, "overrides": {"foo@../bar": "../baz"}}

`;

exports[`invalid(17): {\"dependencies\": {\"foo\": \"../foo\"}, \"overrides\": {\"foo@../bar\": \"../baz\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "../foo"}, "overrides": {"foo@../bar": "../baz"}}
    |                                                                 ^^^^^^^^ Override for direct dependency \`foo\` conflicts with its \`../foo\` specifier.

Output:
  1 | {"dependencies": {"foo": "../foo"}, "overrides": {"foo@../bar": "$foo"}}

`;

exports[`invalid(18): {\"dependencies\": {\"foo\": \"https://example.com/foo.tgz\"}, \"overrides\": {\"foo@https://example.com/bar.tgz\": \"https://example.com/baz.tgz\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "https://example.com/foo.tgz"}, "overrides": {"foo@https://example.com/bar.tgz": "https://example.com/baz.tgz"}}

`;

exports[`invalid(18): {\"dependencies\": {\"foo\": \"https://example.com/foo.tgz\"}, \"overrides\": {\"foo@https://example.com/bar.tgz\": \"https://example.com/baz.tgz\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "https://example.com/foo.tgz"}, "overrides": {"foo@https://example.com/bar.tgz": "https://example.com/baz.tgz"}}
    |                                                                                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Override for direct dependency \`foo\` conflicts with its \`https://example.com/foo.tgz\` specifier.

Output:
  1 | {"dependencies": {"foo": "https://example.com/foo.tgz"}, "overrides": {"foo@https://example.com/bar.tgz": "$foo"}}

`;

exports[`invalid(19): {\"dependencies\": {\"foo\": \"^1.2.3\"}, \"overrides\": {\"foo@^1.0.0\": \"^2.0.0\", \"foo@~1.2.0\": \"^1.2.3\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "^1.2.3"}, "overrides": {"foo@^1.0.0": "^2.0.0", "foo@~1.2.0": "^1.2.3"}}

`;

exports[`invalid(19): {\"dependencies\": {\"foo\": \"^1.2.3\"}, \"overrides\": {\"foo@^1.0.0\": \"^2.0.0\", \"foo@~1.2.0\": \"^1.2.3\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "^1.2.3"}, "overrides": {"foo@^1.0.0": "^2.0.0", "foo@~1.2.0": "^1.2.3"}}
    |                                                                 ^^^^^^^^ Override for direct dependency \`foo\` conflicts with its \`^1.2.3\` specifier.

Output:
  1 | {"dependencies": {"foo": "^1.2.3"}, "overrides": {"foo@^1.0.0": "$foo", "foo@~1.2.0": "^1.2.3"}}

`;

exports[`invalid(2): {\"devDependencies\": {\"foo\": \"^1.0.0\"}, \"overrides\": {\"foo\": \"^2.0.0\"}} 1`] = `

[Input]
  1 | {"devDependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "^2.0.0"}}

`;

exports[`invalid(2): {\"devDependencies\": {\"foo\": \"^1.0.0\"}, \"overrides\": {\"foo\": \"^2.0.0\"}} 2`] = `

Message:
> 1 | {"devDependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "^2.0.0"}}
    |                                                             ^^^^^^^^ Override for direct dependency \`foo\` conflicts with its \`^1.0.0\` specifier.

Output:
  1 | {"devDependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "$foo"}}

`;

exports[`invalid(20): {\"dependencies\": {\"foo\": \"^1.2.3\"}, \"overrides\": {\"foo@^1.0.0\": {}}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "^1.2.3"}, "overrides": {"foo@^1.0.0": {}}}

`;

exports[`invalid(20): {\"dependencies\": {\"foo\": \"^1.2.3\"}, \"overrides\": {\"foo@^1.0.0\": {}}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "^1.2.3"}, "overrides": {"foo@^1.0.0": {}}}
    |                                                                 ^^ Override for direct dependency \`foo\` conflicts with its \`^1.2.3\` specifier.

Output:
  1 | {"dependencies": {"foo": "^1.2.3"}, "overrides": {"foo@^1.0.0": {".": "$foo"}}}

`;

exports[`invalid(21): {\"dependencies\":{\"4294967295\":\"^1\"},\"overrides\":{\"4294967295@^1\":\"^2\",\"4294967295\":\"*\"}} 1`] = `

[Input]
  1 | {"dependencies":{"4294967295":"^1"},"overrides":{"4294967295@^1":"^2","4294967295":"*"}}

`;

exports[`invalid(21): {\"dependencies\":{\"4294967295\":\"^1\"},\"overrides\":{\"4294967295@^1\":\"^2\",\"4294967295\":\"*\"}} 2`] = `

Message:
> 1 | {"dependencies":{"4294967295":"^1"},"overrides":{"4294967295@^1":"^2","4294967295":"*"}}
    |                                                                  ^^^^ Override for direct dependency \`4294967295\` conflicts with its \`^1\` specifier.

Output:
  1 | {"dependencies":{"4294967295":"^1"},"overrides":{"4294967295@^1":"$4294967295","4294967295":"*"}}

`;

exports[`invalid(22): {\"dependencies\":{\"foo\":\"^1.2.3\"},\"overrides\":{\"foo@^1.0.0\":{\"bar\":\"^2.0.0\"}}} 1`] = `

[Input]
  1 | {"dependencies":{"foo":"^1.2.3"},"overrides":{"foo@^1.0.0":{"bar":"^2.0.0"}}}

`;

exports[`invalid(22): {\"dependencies\":{\"foo\":\"^1.2.3\"},\"overrides\":{\"foo@^1.0.0\":{\"bar\":\"^2.0.0\"}}} 2`] = `

Message:
> 1 | {"dependencies":{"foo":"^1.2.3"},"overrides":{"foo@^1.0.0":{"bar":"^2.0.0"}}}
    |                                                            ^^^^^^^^^^^^^^^^ Override for direct dependency \`foo\` conflicts with its \`^1.2.3\` specifier.

Output:
  1 | {"dependencies":{"foo":"^1.2.3"},"overrides":{"foo@^1.0.0":{".":"$foo","bar":"^2.0.0"}}}

`;

exports[`invalid(23): {\n\t\"dependencies\": {\n\t\t\"foo\": \"^1.2.3\"\n\t},\n\t\"overrides\": {\n\t\t\"foo@^1.0.0\": {\n\t\t\t\"bar\": \"^2.0.0\"\n\t\t}\n\t}\n} 1`] = `

[Input]
   1 | {
   2 | 	"dependencies": {
   3 | 		"foo": "^1.2.3"
   4 | 	},
   5 | 	"overrides": {
   6 | 		"foo@^1.0.0": {
   7 | 			"bar": "^2.0.0"
   8 | 		}
   9 | 	}
  10 | }

`;

exports[`invalid(23): {\n\t\"dependencies\": {\n\t\t\"foo\": \"^1.2.3\"\n\t},\n\t\"overrides\": {\n\t\t\"foo@^1.0.0\": {\n\t\t\t\"bar\": \"^2.0.0\"\n\t\t}\n\t}\n} 2`] = `

Message:
   1 | {
   2 | 	"dependencies": {
   3 | 		"foo": "^1.2.3"
   4 | 	},
   5 | 	"overrides": {
>  6 | 		"foo@^1.0.0": {
     | 		              ^
>  7 | 			"bar": "^2.0.0"
     | ^^^^^^^^^^^^^^^^^^
>  8 | 		}
     | ^^^ Override for direct dependency \`foo\` conflicts with its \`^1.2.3\` specifier.
   9 | 	}
  10 | }

Output:
   1 | {
   2 | 	"dependencies": {
   3 | 		"foo": "^1.2.3"
   4 | 	},
   5 | 	"overrides": {
   6 | 		"foo@^1.0.0": {
   7 | 			".": "$foo",
   8 | 			"bar": "^2.0.0"
   9 | 		}
  10 | 	}
  11 | }

`;

exports[`invalid(24): {\n\t\"dependencies\": {\n\t\t\"foo\": \"^1.2.3\"\n\t},\n\t\"overrides\": {\n\t\t\"foo@^1.0.0\": {\n\t\t}\n\t}\n} 1`] = `

[Input]
  1 | {
  2 | 	"dependencies": {
  3 | 		"foo": "^1.2.3"
  4 | 	},
  5 | 	"overrides": {
  6 | 		"foo@^1.0.0": {
  7 | 		}
  8 | 	}
  9 | }

`;

exports[`invalid(24): {\n\t\"dependencies\": {\n\t\t\"foo\": \"^1.2.3\"\n\t},\n\t\"overrides\": {\n\t\t\"foo@^1.0.0\": {\n\t\t}\n\t}\n} 2`] = `

Message:
  1 | {
  2 | 	"dependencies": {
  3 | 		"foo": "^1.2.3"
  4 | 	},
  5 | 	"overrides": {
> 6 | 		"foo@^1.0.0": {
    | 		              ^
> 7 | 		}
    | ^^^ Override for direct dependency \`foo\` conflicts with its \`^1.2.3\` specifier.
  8 | 	}
  9 | }

Output:
   1 | {
   2 | 	"dependencies": {
   3 | 		"foo": "^1.2.3"
   4 | 	},
   5 | 	"overrides": {
   6 | 		"foo@^1.0.0": {
   7 | 			".": "$foo"
   8 | 		}
   9 | 	}
  10 | }

`;

exports[`invalid(25): {\"dependencies\":{\"foo\":\"^1\",\"bar\":\"^2\"},\"devDependencies\":{\"bar\":\"\"},\"overrides\":{\"foo\":\"$bar\"}} 1`] = `

[Input]
  1 | {"dependencies":{"foo":"^1","bar":"^2"},"devDependencies":{"bar":""},"overrides":{"foo":"$bar"}}

`;

exports[`invalid(25): {\"dependencies\":{\"foo\":\"^1\",\"bar\":\"^2\"},\"devDependencies\":{\"bar\":\"\"},\"overrides\":{\"foo\":\"$bar\"}} 2`] = `

Message:
> 1 | {"dependencies":{"foo":"^1","bar":"^2"},"devDependencies":{"bar":""},"overrides":{"foo":"$bar"}}
    |                                                                                         ^^^^^^ Override for direct dependency \`foo\` conflicts with its \`^1\` specifier.

Output:
  1 | {"dependencies":{"foo":"^1","bar":"^2"},"devDependencies":{"bar":""},"overrides":{"foo":"$foo"}}

`;

exports[`invalid(26): {\"dependencies\":{\"Foo\":\"^1\"},\"devDependencies\":{\"foo\":\"^2\"},\"overrides\":{\"foo\":\"^1\"}} 1`] = `

[Input]
  1 | {"dependencies":{"Foo":"^1"},"devDependencies":{"foo":"^2"},"overrides":{"foo":"^1"}}

`;

exports[`invalid(26): {\"dependencies\":{\"Foo\":\"^1\"},\"devDependencies\":{\"foo\":\"^2\"},\"overrides\":{\"foo\":\"^1\"}} 2`] = `

Message:
> 1 | {"dependencies":{"Foo":"^1"},"devDependencies":{"foo":"^2"},"overrides":{"foo":"^1"}}
    |                                                                                ^^^^ Override for direct dependency \`foo\` conflicts with its \`^2\` specifier.

Output:
  1 | {"dependencies":{"Foo":"^1"},"devDependencies":{"foo":"^2"},"overrides":{"foo":"$foo"}}

`;

exports[`invalid(3): {\"optionalDependencies\": {\"foo\": \"^1.0.0\"}, \"overrides\": {\"foo\": \"^2.0.0\"}} 1`] = `

[Input]
  1 | {"optionalDependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "^2.0.0"}}

`;

exports[`invalid(3): {\"optionalDependencies\": {\"foo\": \"^1.0.0\"}, \"overrides\": {\"foo\": \"^2.0.0\"}} 2`] = `

Message:
> 1 | {"optionalDependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "^2.0.0"}}
    |                                                                  ^^^^^^^^ Override for direct dependency \`foo\` conflicts with its \`^1.0.0\` specifier.

Output:
  1 | {"optionalDependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "$foo"}}

`;

exports[`invalid(4): {\"peerDependencies\": {\"foo\": \"^1.0.0\"}, \"overrides\": {\"foo\": \"^2.0.0\"}} 1`] = `

[Input]
  1 | {"peerDependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "^2.0.0"}}

`;

exports[`invalid(4): {\"peerDependencies\": {\"foo\": \"^1.0.0\"}, \"overrides\": {\"foo\": \"^2.0.0\"}} 2`] = `

Message:
> 1 | {"peerDependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "^2.0.0"}}
    |                                                              ^^^^^^^^ Override for direct dependency \`foo\` conflicts with its \`^1.0.0\` specifier.

Output:
  1 | {"peerDependencies": {"foo": "^1.0.0"}, "overrides": {"foo": "$foo"}}

`;

exports[`invalid(5): {\"dependencies\": {\"foo\": \"^1.0.0\", \"bar\": \"^2.0.0\"}, \"overrides\": {\"foo\": \"$bar\"}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}, "overrides": {"foo": "$bar"}}

`;

exports[`invalid(5): {\"dependencies\": {\"foo\": \"^1.0.0\", \"bar\": \"^2.0.0\"}, \"overrides\": {\"foo\": \"$bar\"}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}, "overrides": {"foo": "$bar"}}
    |                                                                           ^^^^^^ Override for direct dependency \`foo\` conflicts with its \`^1.0.0\` specifier.

Output:
  1 | {"dependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}, "overrides": {"foo": "$foo"}}

`;

exports[`invalid(6): {\"dependencies\": {\"foo\": \"^1.0.0\", \"bar\": \"^2.0.0\"}, \"overrides\": {\"foo\": {\".\": \"$bar\"}}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}, "overrides": {"foo": {".": "$bar"}}}

`;

exports[`invalid(6): {\"dependencies\": {\"foo\": \"^1.0.0\", \"bar\": \"^2.0.0\"}, \"overrides\": {\"foo\": {\".\": \"$bar\"}}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}, "overrides": {"foo": {".": "$bar"}}}
    |                                                                                 ^^^^^^ Override for direct dependency \`foo\` conflicts with its \`^1.0.0\` specifier.

Output:
  1 | {"dependencies": {"foo": "^1.0.0", "bar": "^2.0.0"}, "overrides": {"foo": {".": "$foo"}}}

`;

exports[`invalid(7): {\"dependencies\": {\"@scope/foo\": \"^1.0.0\"}, \"overrides\": {\"@scope/foo\": \"^2.0.0\"}} 1`] = `

[Input]
  1 | {"dependencies": {"@scope/foo": "^1.0.0"}, "overrides": {"@scope/foo": "^2.0.0"}}

`;

exports[`invalid(7): {\"dependencies\": {\"@scope/foo\": \"^1.0.0\"}, \"overrides\": {\"@scope/foo\": \"^2.0.0\"}} 2`] = `

Message:
> 1 | {"dependencies": {"@scope/foo": "^1.0.0"}, "overrides": {"@scope/foo": "^2.0.0"}}
    |                                                                        ^^^^^^^^ Override for direct dependency \`@scope/foo\` conflicts with its \`^1.0.0\` specifier.

Output:
  1 | {"dependencies": {"@scope/foo": "^1.0.0"}, "overrides": {"@scope/foo": "$@scope/foo"}}

`;

exports[`invalid(8): {\"dependencies\": {\"foo\": \"^1.0.0\"}, \"overrides\": {\"foo\": {\".\": \"^2.0.0\"}}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": {".": "^2.0.0"}}}

`;

exports[`invalid(8): {\"dependencies\": {\"foo\": \"^1.0.0\"}, \"overrides\": {\"foo\": {\".\": \"^2.0.0\"}}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": {".": "^2.0.0"}}}
    |                                                                ^^^^^^^^ Override for direct dependency \`foo\` conflicts with its \`^1.0.0\` specifier.

Output:
  1 | {"dependencies": {"foo": "^1.0.0"}, "overrides": {"foo": {".": "$foo"}}}

`;

exports[`invalid(9): {\"dependencies\": {\"foo\": \"^1.2.3\"}, \"overrides\": {\"foo@^1.0.0\": {\"bar\": \"^2.0.0\"}}} 1`] = `

[Input]
  1 | {"dependencies": {"foo": "^1.2.3"}, "overrides": {"foo@^1.0.0": {"bar": "^2.0.0"}}}

`;

exports[`invalid(9): {\"dependencies\": {\"foo\": \"^1.2.3\"}, \"overrides\": {\"foo@^1.0.0\": {\"bar\": \"^2.0.0\"}}} 2`] = `

Message:
> 1 | {"dependencies": {"foo": "^1.2.3"}, "overrides": {"foo@^1.0.0": {"bar": "^2.0.0"}}}
    |                                                                 ^^^^^^^^^^^^^^^^^ Override for direct dependency \`foo\` conflicts with its \`^1.2.3\` specifier.

Output:
  1 | {"dependencies": {"foo": "^1.2.3"}, "overrides": {"foo@^1.0.0": {".": "$foo","bar": "^2.0.0"}}}

`;
